--- a/RecipeFinder/app/src/main/res/layout/activity_recipe.xml
+++ b/RecipeFinder/app/src/main/res/layout/activity_recipe.xml
@@ -8,210 +8,281 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/tvTitle"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"/>
-
-
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTitle"
-        android:layout_alignParentStart="false"
-        android:id="@+id/tableLayout">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text="Boek:"
-                android:id="@+id/tvBookLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text=""
-                android:id="@+id/tvBook" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text="Pagina:"
-                android:id="@+id/tvPageLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text=""
-                android:id="@+id/tvPage" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text="Keuken:"
-                android:id="@+id/tvKitchenLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text=""
-                android:id="@+id/tvKitchen" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text="Gerecht:"
-                android:id="@+id/tvCourseLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text=""
-                android:id="@+id/tvCourse" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text="Bereidings tijd:"
-                android:id="@+id/tvTimeLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:id="@+id/tvTime" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text="Personen:"
-                android:textColor="#5a595b"
-                android:id="@+id/tvPersonsLabel"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:text=""
-                android:textColor="#5a595b"
-                android:id="@+id/tvPersons" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text="Lactose vrij"
-                android:textStyle="bold"
-                android:id="@+id/cbLactoseFree"
-                android:layout_column="0"
-                android:button="@null"
-                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/AppTextMedium"
-                android:textColor="#5a595b"
-                android:text="Gluten vrij"
-                android:textStyle="bold"
-                android:id="@+id/cbGlutenFree"
-                android:layout_column="0"
-                android:button="@null"
-                android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
-        </TableRow>
-    </TableLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Ingredienten"
-            android:id="@+id/tvIngredients"
-            android:paddingTop="20px"
-            android:textStyle="bold"/>
+            android:text="Titel"
+            android:id="@+id/tvTitle"
+            android:textStyle="bold"
+            android:gravity="center" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:nestedScrollingEnabled="true"
-            android:id="@+id/lvIngredients"/>
-    </LinearLayout>
-</ScrollView>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#aaaaaa">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Details"
+                        android:id="@+id/bTabDetails"
+                        android:layout_weight="1"
+                        android:background="#aaaaaa"
+                        android:layout_margin="1dp" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Allergieën"
+                        android:id="@+id/bTabAllergies"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:layout_margin="1dp" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Ingredienten"
+                        android:id="@+id/bTabIngredients"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:layout_margin="1dp" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tlDetails"
+                android:padding="10dp"
+                android:visibility="visible">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text="Boek"
+                    android:id="@+id/tvBookLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text=""
+                    android:id="@+id/tvBook"
+                    android:layout_marginLeft="20dp"/>
+
+
+            </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:background="#bdbdbd">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView" />
+                </TableRow>
+
+                <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text="Pagina"
+                    android:id="@+id/tvPageLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:text=""
+                    android:id="@+id/tvPage"
+                    android:layout_marginLeft="20dp" />
+            </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:background="#bdbdbd" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView2" />
+                </TableRow>
+
+                <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:text="Keuken"
+                    android:id="@+id/tvKitchenLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text=""
+                    android:id="@+id/tvKitchen"
+                    android:layout_marginLeft="20dp" />
+            </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#bdbdbd" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView3" />
+                </TableRow>
+
+                <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:text="Gerecht"
+                    android:id="@+id/tvCourseLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:text=""
+                    android:id="@+id/tvCourse"
+                    android:layout_marginLeft="20dp" />
+            </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#bdbdbd" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView4" />
+                </TableRow>
+
+                <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:text="Bereidings tijd"
+                    android:id="@+id/tvTimeLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:textColor="#5a595b"
+                    android:id="@+id/tvTime"
+                    android:layout_marginLeft="20dp" />
+            </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#bdbdbd" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView5" />
+                </TableRow>
+
+                <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text="Personen"
+                    android:textColor="#5a595b"
+                    android:id="@+id/tvPersonsLabel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/AppTextMedium"
+                    android:text=""
+                    android:textColor="#5a595b"
+                    android:id="@+id/tvPersons"
+                    android:layout_marginLeft="20dp" />
+            </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#bdbdbd" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0.5dp"
+                        android:id="@+id/imageView6" />
+                </TableRow>
+            </TableLayout>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:nestedScrollingEnabled="true"
+                android:id="@+id/lvAllergies"
+                android:padding="10dp"
+                android:visibility="gone" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:nestedScrollingEnabled="true"
+                android:id="@+id/lvIngredients"
+                android:padding="10dp"
+                android:visibility="gone" />
+        </LinearLayout>
     </FrameLayout>
 
 <ListView
