--- a/RecipeFinder/app/src/main/res/layout/row_ingredient.xml
+++ b/RecipeFinder/app/src/main/res/layout/row_ingredient.xml
@@ -6,18 +6,16 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/AppTextMedium"
             android:layout_weight="1"
             android:text=""
-            android:id="@+id/tvName"
-            android:layout_column="0" />
+            android:id="@+id/tvName" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/AppTextMedium"
             android:layout_weight="1"
             android:text=""
-            android:id="@+id/tvAmount"
-            android:layout_column="1" />
+            android:id="@+id/tvAmount" />
 </LinearLayout>
