--- a/RecipeFinder/app/src/main/res/layout/row_recipe.xml
+++ b/RecipeFinder/app/src/main/res/layout/row_recipe.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Gerecht:"
+                android:padding="3dp"
                 android:id="@+id/tvCourseLabel"
                 android:textStyle="bold" />
 
